fix: aligned menu icons; unselect " select all" when unchecking blocks; inputting into search bar auto opens all categories

--- a/client/src/components/DayPanels/DayPanels.less
+++ b/client/src/components/DayPanels/DayPanels.less
@@ -62,6 +62,8 @@ h3, p {
 
 #action-btn-container {
 
+  margin-top: 0.5vh;
+
   i {
     color: #colors[primary];
     
